--- a/apps/smart-answers/design/erb-templates/landing-page-template.html
+++ b/apps/smart-answers/design/erb-templates/landing-page-template.html
@@ -6,23 +6,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>smart-answers: Flattening Marriage Abroad outcomes for a country - GOV.UK Developer Documentation</title>
+    <title>smart-answers: Landing page template - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/flattening-outcomes.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/design/erb-templates/landing-page-template.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="smart-answers: Flattening Marriage Abroad outcomes for a country - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/flattening-outcomes.html" />
+      <meta name="twitter:title" content="smart-answers: Landing page template - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/design/erb-templates/landing-page-template.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="smart-answers: Flattening Marriage Abroad outcomes for a country" />
+      <meta property="og:title" content="smart-answers: Landing page template" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/flattening-outcomes.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/design/erb-templates/landing-page-template.html" />
 
     
   </head>
@@ -364,31 +364,43 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/5608a0ed738f0399d969fb8b80f04fa6e245d62e">5 Feb 2021</a>
+  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/1477fc852d0052f5c003cffd71ea34ed09d2dfc7">14 Jun 2021</a>
 </div>
 
-  <h1 class="page-title">smart-answers: Flattening Marriage Abroad outcomes for a country</h1>
+  <h1 class="page-title">smart-answers: Landing page template</h1>
 
   
-<p><strong>1. Run the rake task to flatten the outcomes:</strong></p>
-<ul>
-<li><code>bundle exec rake marriage_abroad:flatten_outcomes[&lt;your country&gt;]</code></li>
-<li><code># e.g. bundle exec rake "marriage_abroad:flatten_outcomes[qatar]"</code></li>
-</ul>
-<p><strong>2. Add or move the country into the right section of these files:</strong></p>
-<ul>
-<li><code>config/smart_answers/marriage_abroad_data.yml</code></li>
-<li><code>test/integration/smart_answer_flows/marriage_abroad_test.rb</code></li>
-</ul>
-<p><strong>3. Update any special cases in these files:</strong></p>
-<ul>
-<li><code>test/integration/smart_answer_flows/marriage_abroad_test.rb</code></li>
-<li><code>lib/smart_answer_flows/marriage-abroad.rb</code></li>
-</ul>
-<p><strong>4. Remove any special-case outcome files for the country here:</strong></p>
-<ul>
-<li><code>lib/smart_answer_flows/marriage-abroad/outcomes</code></li>
-</ul>
+<p>Landing page templates live in <code>lib/smart_answer_flows/&lt;flow-name&gt;/&lt;flow-name-with-underscores&gt;.erb</code>.</p>
+<h2 id="content-types">Content types</h2>
+<p>The templates can contain content for any of the following keys:</p>
+<h3 id="title"><code>:title</code></h3>
+<p>Used as the h1 heading and can only be text. Example:</p>
+<pre lang="erb"><code>&lt;% text_for :title do %&gt;
+  Look up Meursing code
+&lt;% end %&gt;
+</code></pre>
+<h3 id="meta_description"><code>:meta_description</code></h3>
+<p>Used as the content for the <a href="https://moz.com/learn/seo/meta-description">meta description tag</a>. Can only be text. Example:</p>
+<pre lang="erb"><code>&lt;% text_for :meta_description do %&gt;
+  Look up the additional code (Meursing code) required for import or export of goods containing certain types of milk and sugars
+&lt;% end %&gt;
+</code></pre>
+<h3 id="body"><code>:body</code></h3>
+<p>Used to generate the main content (appearing above the start button). Expected to be govspeak or HTML. Example:</p>
+<pre lang="erb"><code>&lt;% govspeak_for :body do %&gt;
+  Use this tool to look up the additional code (Meursing code) for import or export of goods containing certain types of milk and sugars covered Regulation (EC) No. 1216/09.
+&lt;% end %&gt;
+</code></pre>
+<pre lang="erb"><code>&lt;% html_for :body do %&gt;
+  &lt;p&gt;Use this tool to look up the additional code (Meursing code) for import or export of goods containing certain types of milk and sugars covered Regulation (EC) No. 1216/09.&lt;/p&gt;
+&lt;% end %&gt;
+</code></pre>
+<h3 id="post_body"><code>:post_body</code></h3>
+<p>Used to generate supplementary content (appearing below the start button). Expected to be govspeak or HTML. Example:</p>
+<pre lang="erb"><code>&lt;% govspeak_for :post_body do %&gt;
+  Code of measuring practice became globally effective in May 2015.
+&lt;% end %&gt;
+</code></pre>
 
 
             
@@ -396,8 +408,8 @@
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answer-flow-development/flattening-outcomes.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/flattening-outcomes.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/design/erb-templates/landing-page-template.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/design/erb-templates/landing-page-template.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
