--- a/apps/smart-answers/design/erb-templates/outcome-templates.html
+++ b/apps/smart-answers/design/erb-templates/outcome-templates.html
@@ -6,23 +6,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>smart-answers: Creating a new Smart Answer - GOV.UK Developer Documentation</title>
+    <title>smart-answers: Outcome templates - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/creating-a-new-smart-answer.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/design/erb-templates/outcome-templates.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="smart-answers: Creating a new Smart Answer - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/creating-a-new-smart-answer.html" />
+      <meta name="twitter:title" content="smart-answers: Outcome templates - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/design/erb-templates/outcome-templates.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="smart-answers: Creating a new Smart Answer" />
+      <meta property="og:title" content="smart-answers: Outcome templates" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/creating-a-new-smart-answer.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/design/erb-templates/outcome-templates.html" />
 
     
   </head>
@@ -364,116 +364,45 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/f2494f18f0b0300a88254d64cc822db27bd5e6b0">6 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/1477fc852d0052f5c003cffd71ea34ed09d2dfc7">14 Jun 2021</a>
 </div>
 
-  <h1 class="page-title">smart-answers: Creating a new Smart Answer</h1>
+  <h1 class="page-title">smart-answers: Outcome templates</h1>
 
   
-<p>There are two methods for creating a new smart answer:</p>
-<ol>
-<li>automatically - via a rails generator, and</li>
-<li>manually.</li>
-</ol>
-<h2 id="using-the-rails-smart_answer-generator">Using the rails <code>smart_answer</code> generator</h2>
-<p>To automatically generate a skeleton smart answer use the provided rails
-generator...</p>
-<pre lang="bash"><code>$ rails generate smart_answer my_smart_answer
-</code></pre>
-<p>This will create an example flow, calculator, questions, outcome and landing
-pages.</p>
-<p>The generated files do not constitute a complete set of all possible question
-types, and configuration options. However, they should be enough to get you
-started and to show how the various files work together.</p>
-<p>To see a list of the files that the generator will create use either the
-<code>--help</code> or <code>--pretend</code> options, like this...</p>
-<pre lang="bash"><code>$ rails generate smart_answer --help
-$ rails generate smart_answer my_smart_answer --pretend
-</code></pre>
-<h2 id="manually-creating-a-new-smart-answer">Manually creating a new Smart Answer</h2>
-<p>This walks through the basics of manually creating a new Smart Answer.</p>
-<h3 id="1-create-a-new-skeleton-flow">1. Create a new skeleton flow</h3>
-<p>Start by creating a new file to hold the logic of our flow:</p>
-<pre lang="bash"><code>$ touch lib/smart_answer_flows/example-smart-answer.rb
-</code></pre>
-<p>Open the new file in your editor and copy/paste this skeleton flow:</p>
-<pre lang="ruby"><code>module SmartAnswer
-  class ExampleSmartAnswerFlow &lt; Flow
-    def define
-      name 'example-smart-answer'
-      content_id "&lt;SecureRandom.uuid&gt;"
-      status :draft
-
-      value_question :question_1? do
-        next_node do
-          outcome :outcome_1
-        end
-      end
-
-      outcome :outcome_1
-    end
-  end
-end
-</code></pre>
-<p>This flow contains a single question and a single outcome. Any non-empty response to <code>:question_1?</code> will send you to <code>:outcome_1</code>.</p>
-<p>If you were to run <code>rails server</code> and visit <a href="http://localhost:3000/example-smart-answer">http://localhost:3000/example-smart-answer</a> at this point, you'd see an error that indicates that we need to add a landing page template.</p>
-<h3 id="2-create-an-erb-landing-page-template">2. Create an ERB landing page template</h3>
-<p>Create a new file for our landing page template.</p>
-<pre><code>$ mkdir lib/smart_answer_flows/example-smart-answer
-$ touch lib/smart_answer_flows/example-smart-answer/example_smart_answer.erb
-</code></pre>
-<p>Although the landing page template needs to exist, it doesn't actually need to contain anything!</p>
-<p>Assuming you're still running <code>rails server</code>, visit <a href="http://localhost:3000/example-smart-answer">http://localhost:3000/example-smart-answer</a> and you should see the empty landing page of our new Smart Answer.</p>
-<p>Open the new landing page template your editor and copy/paste the following content:</p>
+<p>Outcome templates live in <code>lib/smart_answer_flows/&lt;flow-name&gt;/outcomes/&lt;outcome-name&gt;.erb</code>.</p>
+<h2 id="content-types">Content types</h2>
+<p>The templates can contain content for any of the following keys:</p>
+<h3 id="title"><code>:title</code></h3>
+<p>Used as the h1 heading and can only be text. Example:</p>
 <pre lang="erb"><code>&lt;% text_for :title do %&gt;
-  Smart Answer title
-&lt;% end %&gt;
-
-&lt;% govspeak_for :body do %&gt;
-  Landing page body.
-&lt;% end %&gt;
-</code></pre>
-<p>Refresh the Smart Answer in your browser to see this new content.</p>
-<p>Read more about <a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answer-flow-development/docs/smart-answers/erb-templates/landing-page-template.md">landing page templates</a>.</p>
-<p>Click "Start now" to visit the first question. You should see an error message indicating that we're now missing an ERB template for our question.</p>
-<h3 id="3-create-an-erb-question-page-template">3. Create an ERB question page template</h3>
-<p>Create a new file for our question page template.</p>
-<pre><code>$ mkdir lib/smart_answer_flows/example-smart-answer/questions
-$ touch lib/smart_answer_flows/example-smart-answer/questions/question_1.erb
-</code></pre>
-<p>Although the question page template needs to exist, it doesn't actually need to contain anything!</p>
-<p>Assuming you're still running <code>rails server</code>, visit <a href="http://localhost:3000/example-smart-answer">http://localhost:3000/example-smart-answer</a> and you should see an empty page containing a text field and a "Continue" button.</p>
-<p>Open the new question page template in your editor and copy/paste the following content:</p>
-<pre lang="erb"><code>&lt;% text_for :title do %&gt;
-  Question page title
-&lt;% end %&gt;
-
-&lt;% govspeak_for :body do %&gt;
-  Question page body.
+  &lt;% unless calculator.has_commodity_code? %&gt;
+    The product composition you indicated is not possible.
+  &lt;% else %&gt;
+    The Meursing code for a product with this composition is 7&lt;%= calculator.commodity_code %&gt;.
+  &lt;% end %&gt;
 &lt;% end %&gt;
 </code></pre>
-<p>Refresh the Smart Answer in your browser to see this new content.</p>
-<p>Read more about <a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answer-flow-development/docs/smart-answers/erb-templates/question-templates.md">question page templates</a>.</p>
-<p>Enter any value in the text field and click "Continue". You should see an error message indicating that we're now missing an ERB template for the outcome.</p>
-<h3 id="4-create-an-erb-outcome-page-template">4. Create an ERB outcome page template</h3>
-<p>Create a new file for our outcome page template.</p>
-<pre><code>$ mkdir lib/smart_answer_flows/example-smart-answer/outcomes
-$ touch lib/smart_answer_flows/example-smart-answer/outcomes/outcome_1.erb
-</code></pre>
-<p>Although the question page template needs to exist, it doesn't actually need to contain anything!</p>
-<p>Assuming you're still running <code>rails server</code>, visit <a href="http://localhost:3000/example-smart-answer">http://localhost:3000/example-smart-answer</a> and you should see an empty page containing a list of "Your answers".</p>
-<p>Open the new outcome page template in your editor and copy/paste the following content:</p>
-<pre lang="erb"><code>&lt;% text_for :title do %&gt;
-  Outcome page title
-&lt;% end %&gt;
-
-&lt;% govspeak_for :body do %&gt;
-  Outcome page body.
+<h3 id="body"><code>:body</code></h3>
+<p>Used to generate the main content. Expected to be govspeak or HTML. Example:</p>
+<pre lang="erb"><code>&lt;% govspeak_for :body do %&gt;
+  &lt;% if calculator.has_commodity_code? %&gt;
+    Use these four digits together with the ten-digit commodity code from Trade Tariff.
+  &lt;% end %&gt;
 &lt;% end %&gt;
 </code></pre>
-<p>Refresh the Smart Answer in your browser to see this new content.</p>
-<p>Read more about <a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answer-flow-development/docs/smart-answers/erb-templates/outcome-templates.md">outcome page templates</a>.</p>
-<p>And that's all there is to an incredibly simple Smart Answer.</p>
+<h3 id="use_title_as_h1"><code>:use_title_as_h1</code></h3>
+<p>When <code>true</code>, specifies that you want to use the given <code>title</code> as the outcome page
+<code>&lt;h1&gt;</code> heading instead of the default <code>&lt;h2&gt;</code> heading.  The flow title is no longer
+shown.</p>
+<pre lang="erb"><code>&lt;% use_title_as_h1 true %&gt;
+</code></pre>
+<h3 id="next_steps"><code>next_steps</code></h3>
+<p>Used to generate the "next steps" content (at the top of the right-hand sidebar). Expected to be govspeak or HTML. Example:</p>
+<pre lang="erb"><code>&lt;% govspeak_for :next_steps do %&gt;
+  Find out what happens to [ownerless property](/unclaimed-estates-bona-vacantia "Ownerless property (bona vacantia)")
+&lt;% end %&gt;
+</code></pre>
 
 
             
@@ -481,8 +410,8 @@ $ touch lib/smart_answer_flows/example-smart-answer/outcomes/outcome_1.erb
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answer-flow-development/creating-a-new-smart-answer.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/creating-a-new-smart-answer.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/design/erb-templates/outcome-templates.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/design/erb-templates/outcome-templates.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
