--- a/apps/smart-answers/design/question-types.html
+++ b/apps/smart-answers/design/question-types.html
@@ -6,23 +6,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>smart-answers: Updating Worldwide fixture data - GOV.UK Developer Documentation</title>
+    <title>smart-answers: Question types - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/updating-worldwide-fixture-data.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/design/question-types.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="smart-answers: Updating Worldwide fixture data - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/updating-worldwide-fixture-data.html" />
+      <meta name="twitter:title" content="smart-answers: Question types - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/design/question-types.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="smart-answers: Updating Worldwide fixture data" />
+      <meta property="og:title" content="smart-answers: Question types" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/updating-worldwide-fixture-data.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/design/question-types.html" />
 
     
   </head>
@@ -364,22 +364,105 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/5608a0ed738f0399d969fb8b80f04fa6e245d62e">5 Feb 2021</a>
+  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/1477fc852d0052f5c003cffd71ea34ed09d2dfc7">14 Jun 2021</a>
 </div>
 
-  <h1 class="page-title">smart-answers: Updating Worldwide fixture data</h1>
+  <h1 class="page-title">smart-answers: Question types</h1>
 
   
-<p>Ideally, we'll keep both the location and organisation data up to date but there's nothing prompting us to do that at the moment.</p>
-<p>You should ensure you run all the tests after updating this data.</p>
-<h2 id="worldwide-locations">Worldwide locations</h2>
-<p>Update the worldwide location fixture data using:</p>
-<pre lang="bash"><code>$ rails r script/update-world-locations.rb
-</code></pre>
-<h2 id="worldwide-organisations">Worldwide organisations</h2>
-<p>Update the worldwide organisations fixture data using:</p>
-<pre lang="bash"><code>$ rails r script/update-worldwide-location-organisations.rb
-</code></pre>
+<h2 id="checkbox_question"><code>checkbox_question</code></h2>
+<ul>
+<li>User input: Choose zero to many options from a list of options.</li>
+<li>Validation: Must be in the list of options.</li>
+<li>Response: String containing comma-separated list of chosen options.</li>
+<li>Can specify <code>none_option</code> in flow definition to represent a "none" answer. This ensures the user has selected at least one checkbox before continuing.</li>
+</ul>
+<h2 id="country_select"><code>country_select</code></h2>
+<ul>
+<li>Options:
+<ul>
+<li>
+<code>exclude_countries</code>: Optional. Array of countries to exclude from the list.</li>
+<li>
+<code>include_uk</code>: Optional. Boolean indicating whether to include 'united-kingdom' in the list.</li>
+<li>
+<code>additional_countries</code>: Optional. Array of countries to add to the list.</li>
+</ul>
+</li>
+<li>User input: Choose a single country.</li>
+<li>Validation: Must be in the list of countries.</li>
+<li>Response: String containing the chosen country.</li>
+</ul>
+<h2 id="date_question"><code>date_question</code></h2>
+<ul>
+<li>User input: Choose a single date.</li>
+<li>Validation: Must be a valid date.</li>
+<li>Response: <code>Date</code> object.</li>
+</ul>
+<h2 id="money_question"><code>money_question</code></h2>
+<ul>
+<li>User input: Enter a money amount.</li>
+<li>Validation: Must be a number.</li>
+<li>Response: <code>Money</code> object.</li>
+</ul>
+<h2 id="radio"><code>radio</code></h2>
+<ul>
+<li>User input: Choose a single option from a list of options.</li>
+<li>Validation: Must be in the list of options.</li>
+<li>Response: String containing the chosen option.</li>
+<li>Can remove options.</li>
+</ul>
+<h2 id="postcode_question"><code>postcode_question</code></h2>
+<ul>
+<li>User input: Enter a postcode.</li>
+<li>Validation: Must be a valid postcode.</li>
+<li>Response: String containing a normalised postcode (e.g. "wc2b6nh" becomes "WC2B 6NH").</li>
+</ul>
+<h2 id="salary_question"><code>salary_question</code></h2>
+<ul>
+<li>User input: Enter an Amount and associated Period.</li>
+<li>Validation: Amount must be a valid <code>Money</code> object and Period must be one of 'year', 'month' or 'week'.</li>
+<li>Response: <code>Salary</code> object.</li>
+</ul>
+<h2 id="value_question"><code>value_question</code></h2>
+<ul>
+<li>Options:
+<ul>
+<li>
+<code>parse</code>: Optional. One of <code>Integer</code>, <code>:to_i</code>, <code>Float</code> or <code>:to_f</code>
+</li>
+</ul>
+</li>
+<li>User input: Enter any text.</li>
+<li>Validation (depends on the <code>parse</code> option):
+<ul>
+<li>
+<code>Integer</code>: Must be a number.</li>
+<li>
+<code>:to_i</code>: Should be a number but non numbers are valid.</li>
+<li>
+<code>Float</code>: Must be a number.</li>
+<li>
+<code>:to_f</code>: Should be a number but non numbers are valid.</li>
+<li>
+<code>&lt;anything-else&gt;</code>: No validation.</li>
+</ul>
+</li>
+<li>Response (depends on the <code>parse</code> option):
+<ul>
+<li>
+<code>Integer</code>: Integer.</li>
+<li>
+<code>:to_i</code>: Integer (Non-numeric input returns 0).</li>
+<li>
+<code>Float</code>: Float.</li>
+<li>
+<code>:to_f</code>: Float (Non-numeric input returns 0.0).</li>
+<li>
+<code>&lt;anything-else&gt;</code>: String containing the user input.</li>
+</ul>
+</li>
+</ul>
 
 
             
@@ -387,8 +470,8 @@
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answer-flow-development/updating-worldwide-fixture-data.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answer-flow-development/updating-worldwide-fixture-data.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/design/question-types.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/design/question-types.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
