--- a/apps/smart-answers/tasks/publishing.html
+++ b/apps/smart-answers/tasks/publishing.html
@@ -6,23 +6,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>smart-answers: ERB templates - GOV.UK Developer Documentation</title>
+    <title>smart-answers: ## Publishing - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answers/erb-templates.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/tasks/publishing.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="smart-answers: ERB templates - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answers/erb-templates.html" />
+      <meta name="twitter:title" content="smart-answers: ## Publishing - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/tasks/publishing.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="smart-answers: ERB templates" />
+      <meta property="og:title" content="smart-answers: ## Publishing" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answers/erb-templates.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/tasks/publishing.html" />
 
     
   </head>
@@ -364,33 +364,14 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/5608a0ed738f0399d969fb8b80f04fa6e245d62e">5 Feb 2021</a>
+  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/1477fc852d0052f5c003cffd71ea34ed09d2dfc7">14 Jun 2021</a>
 </div>
 
-  <h1 class="page-title">smart-answers: ERB templates</h1>
+  <h1 class="page-title">smart-answers: ## Publishing</h1>
 
-  
-<p>Content is defined using one of three helpers to indicate the format with an argument to indicate the intent:</p>
-<pre lang="erb"><code>&lt;% text_for :title do %&gt;
-  This is plain text, any HTML characters used will be espaced. Any indentation is automatically removed.
-&lt;% end %&gt;
-</code></pre>
-<pre lang="erb"><code>&lt;% govspeak_for :body do %&gt;
-  This uses the GOV.UK markdown dialect, [govspeak](https://github.com/alphagov/govspeak),
-  and will be converted to HTML. Any indentation is automatically removed.
-&lt;% end %&gt;
-</code></pre>
-<pre lang="erb"><code>&lt;% html_for :body do %&gt;
-  &lt;p&gt;This is HTML, used when we need fine grained control over content&lt;/p&gt;
-&lt;% end %&gt;
-</code></pre>
-<p>See the template page documentation for the available contexts and their allowed formats:</p>
-<ul>
-<li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answers/erb-templates/landing-page-template.md">Landing page templates</a></li>
-<li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answers/erb-templates/question-templates.md">Question templates</a></li>
-<li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answers/erb-templates/outcome-templates.md">Outcome templates</a></li>
-</ul>
-<p>Any state variable defined in the flow is available to be used in the ERB template. See <a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answers/storing-data.md">storing data</a> for the various ways that you can set state variables.</p>
+  <h3 id="publishing">Publishing</h3>
+<p>Changes to smart answer pages need to be sent to be sent to the <code>content store</code> for them to appear on GOV.UK.</p>
+<p>The <a href="https://github.com/alphagov/smart-answers/blob/master/lib/tasks/publishing_api.rake">rake task <code>publishing_api:sync_all</code></a> needs to be run once you have deployed your changes in each environment and can be done in <a href="https://deploy.integration.publishing.service.gov.uk/job/run-rake-task/parambuild/?TARGET_APPLICATION=smartanswers&amp;MACHINE_CLASS=calculators_frontend&amp;RAKE_TASK=publishing_api:sync_all">Jenkins</a>.</p>
 
 
             
@@ -398,8 +379,8 @@
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answers/erb-templates.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answers/erb-templates.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/tasks/publishing.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/tasks/publishing.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
