--- a/apps/smart-answers/tasks/updating-worldwide-fixture-data.html
+++ b/apps/smart-answers/tasks/updating-worldwide-fixture-data.html
@@ -6,23 +6,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>smart-answers: Next node rules - GOV.UK Developer Documentation</title>
+    <title>smart-answers: Updating Worldwide fixture data - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answers/next-node-rules.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/smart-answers/tasks/updating-worldwide-fixture-data.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="smart-answers: Next node rules - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answers/next-node-rules.html" />
+      <meta name="twitter:title" content="smart-answers: Updating Worldwide fixture data - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/tasks/updating-worldwide-fixture-data.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="smart-answers: Next node rules" />
+      <meta property="og:title" content="smart-answers: Updating Worldwide fixture data" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answers/next-node-rules.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/smart-answers/tasks/updating-worldwide-fixture-data.html" />
 
     
   </head>
@@ -364,59 +364,21 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/5608a0ed738f0399d969fb8b80f04fa6e245d62e">5 Feb 2021</a>
+  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/1477fc852d0052f5c003cffd71ea34ed09d2dfc7">14 Jun 2021</a>
 </div>
 
-  <h1 class="page-title">smart-answers: Next node rules</h1>
+  <h1 class="page-title">smart-answers: Updating Worldwide fixture data</h1>
 
   
-<p>The <code>next_node</code> method takes a block that should return the next node (question or outcome) to send the user to. The relevant node key must be returned via the <code>question</code> or <code>outcome</code> method.</p>
-<pre lang="ruby"><code>next_node do |response|
-  if response == 'green'
-    question :green? # Go to the :green? question node
-  else
-    outcome :red # Go to the :red outcome node
-  end
-end
+<p>Ideally, we'll keep both the location and organisation data up to date but there's nothing prompting us to do that at the moment.</p>
+<p>You should ensure you run all the tests after updating this data.</p>
+<h2 id="worldwide-locations">Worldwide locations</h2>
+<p>Update the worldwide location fixture data using:</p>
+<pre lang="bash"><code>$ rails r script/update-world-locations.rb
 </code></pre>
-<h2 id="errors">Errors</h2>
-<h3 id="multiple-calls-to-next_node-are-not-allowed">Multiple calls to next_node are not allowed</h3>
-<p>Occurs if <code>next_node</code> is called more than once within a single question block.</p>
-<pre lang="ruby"><code># For example
-next_node do
-  outcome :red
-end
-next_node do
-  question :green?
-end
-</code></pre>
-<h3 id="argumenterror-you-must-specify-a-block">ArgumentError: You must specify a block</h3>
-<p>Occurs if <code>next_node</code> is called without a block.</p>
-<pre lang="ruby"><code># For example
-next_node
-</code></pre>
-<h3 id="next-node-undefined">Next node undefined</h3>
-<p>Occurs if the <code>next_node</code> block returns something "falsey" (e.g. <code>nil</code>).</p>
-<pre lang="ruby"><code># For example
-next_node do
-  nil
-end
-</code></pre>
-<h3 id="next-node-not-returned-via-question-or-outcome-method">Next node not returned via question or outcome method</h3>
-<p>Occurs if the <code>next_node</code> block returns something which was not returned by a
-call to <code>#question</code> or <code>#outcome</code>.</p>
-<pre lang="ruby"><code># For example
-next_node do
-  :green?
-end
-</code></pre>
-<h3 id="node-node-name-does-not-exist">Node "node-name" does not exist</h3>
-<p>Occurs if the <code>next_node</code> blocks returns a value that isn't defined as a question or outcome node.</p>
-<pre lang="ruby"><code># For example
-next_node do
-  outcome :red
-end
-outcome :blue
+<h2 id="worldwide-organisations">Worldwide organisations</h2>
+<p>Update the worldwide organisations fixture data using:</p>
+<pre lang="bash"><code>$ rails r script/update-worldwide-location-organisations.rb
 </code></pre>
 
 
@@ -425,8 +387,8 @@ outcome :blue
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/smart-answers/next-node-rules.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/smart-answers/next-node-rules.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/smart-answers/blob/main/docs/tasks/updating-worldwide-fixture-data.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/smart-answers/tasks/updating-worldwide-fixture-data.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
